score visibility and spacing fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,3 +9,7 @@ p {
 hr {
     margin-top: 45px !important
 }
+
+#firstp {
+    padding-top: 0px !important
+}
